--- a/Client/Website/package.json
+++ b/Client/Website/package.json
@@ -18,6 +18,14 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "angular-star-rating": "^6.0.0",
+    "css-star-rating": "^1.3.1",
+    "eslint": "^8.37.0",
+    "ng-let": "^15.0.2",
+    "ngx-autosize": "^2.0.4",
+    "ngx-translate": "^0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
