--- a/Server/composer.json
+++ b/Server/composer.json
@@ -26,7 +26,12 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+
+            "app/Functions/GlobalFunctions.php"
+            
+        ]
     },
     "autoload-dev": {
         "psr-4": {
