--- a/Client/Website/angular.json
+++ b/Client/Website/angular.json
@@ -97,6 +97,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "Application:build:production",
+            "firebaseProject": "purple-motel",
+            "firebaseHostingSite": "purple-motel"
+          }
         }
       }
     }
