--- a/Client/Website/package.json
+++ b/Client/Website/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.5",
     "@angular/platform-browser": "^15.0.0",
@@ -25,6 +26,7 @@
     "angular-star-rating": "^6.0.0",
     "css-star-rating": "^1.3.1",
     "eslint": "^8.37.0",
+    "firebase": "^9.19.1",
     "ng-let": "^15.0.2",
     "ngx-autosize": "^2.0.4",
     "ngx-translate": "^0.0.1-security",
@@ -36,6 +38,7 @@
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.0",
+    "@schematics/angular": "^15.2.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
