--- a/Client/Application/angular.json
+++ b/Client/Application/angular.json
@@ -136,7 +136,10 @@
     }
   },
   "cli": {
-    "schematicCollections": ["@ionic/angular-toolkit"]
+    "schematicCollections": [
+      "@ionic/angular-toolkit"
+    ],
+    "analytics": "caa9db41-b197-42b3-b30e-a4b6f3b23804"
   },
   "schematics": {
     "@ionic/angular-toolkit:component": {
