Worked on The Rooms Page📱
1. Design, Implement Rooms Page
2. 10
3. Worked on the page.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ Homestead.json
 /.vagrant
 .phpunit.result.cache
 Client/Website/src/environments/environment.ts
+Client/Application/package-lock.json
+*.json
