--- a/Client/Application/package.json
+++ b/Client/Application/package.json
@@ -34,6 +34,7 @@
     "ngx-translate": "^0.0.1-security",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "xml2js": "^0.5.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
