--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@ Homestead.json
 /.vagrant
 .phpunit.result.cache
 Client/Website/src/environments/environment.ts
+Client/Application/.firebaserc
+Client/Application/.firebaserc
+Client/Application/.firebaserc
+Client/Application/angular.json
+Client/Application/angular.json
+Client/Application/firebase.json
+*.json
+Client/Application/src/environments/environment.ts
+Client/Application/src/environments/environment.prod.ts
+Client/Application/src/environments/environment.prod.ts
