--- a/Client/Application/package.json
+++ b/Client/Application/package.json
@@ -17,6 +17,7 @@
     "@angular/cdk": "^15.2.7",
     "@angular/common": "^15.0.0",
     "@angular/core": "^15.0.0",
+    "@angular/fire": "^7.5.0",
     "@angular/forms": "^15.0.0",
     "@angular/material": "^15.2.7",
     "@angular/platform-browser": "^15.0.0",
