--- a/Client/Website/package.json
+++ b/Client/Website/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
-    "@angular/cli": "~15.0.4",
+    "@angular/cli": "^15.2.6",
     "@angular/compiler-cli": "^15.0.0",
     "@schematics/angular": "^15.2.5",
     "@types/jasmine": "~4.3.0",
