--- a/Client/Application/package.json
+++ b/Client/Application/package.json
@@ -32,6 +32,7 @@
     "@ionic/angular": "^7.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "ion2-calendar": "^3.5.0",
     "ionicons": "^7.0.0",
     "ngp-image-picker": "^2.4.4",
     "rxjs": "~7.5.0",
