--- a/Client/Application/package.json
+++ b/Client/Application/package.json
@@ -33,6 +33,7 @@
     "@ionic/angular": "^7.0.0",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "ion-rating-stars": "^1.2.1",
     "ion2-calendar": "^3.5.0",
     "ionicons": "^7.0.0",
     "moment": "^2.29.4",
