--- a/Client/Application/tsconfig.json
+++ b/Client/Application/tsconfig.json
@@ -22,6 +22,7 @@
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
+    "experimentalDecorators": true,
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
