Themed the app🏁
1. N/A
2. 10
3. Added full dark mode functionality

--- a/Client/Application/angular.json
+++ b/Client/Application/angular.json
@@ -37,8 +37,11 @@
               }
             ],
             "styles": [
+              "src/theme/themes.scss",
+              "src/global.scss",
+              "src/theme/theme-dark.scss",
               "src/theme/variables.scss",
-              "src/global.scss"
+              "src/theme/variables-dark.scss"
             ],
             "scripts": []
           },
