Fixed Bugs in Admin Panel🏁
1. N/A
2. 10
3. N/A

--- a/Client/Application/angular.json
+++ b/Client/Application/angular.json
@@ -37,7 +37,7 @@
               }
             ],
             "styles": [
-              "src/theme/themes.scss",
+              "src/theme/theme.scss",
               "src/global.scss",
               "src/theme/theme-dark.scss",
               "src/theme/variables.scss",
